--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
     <!-- Projects Section -->
     <section id="projects">
         <h1>Buttons</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores facere eos qui tenetur molestiae dolorem, et veniam aliquam aperiam, molestias, doloremque ullam distinctio aut illo magnam? Amet aliquid ratione animi?</p>
+        </div>
     </section>
 
     <!-- Contact Section -->
