--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
 
     <!-- Contact Section -->
     <section id="contact">
-
+        <div class="social-icons">
+            <i class="fab fa-github"></i>
+            <i class="fab fa-codepen"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-medium"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
     </section>
 
     <!-- Script -->
